--- a/DjangoWebProjectVS2017/app/templates/polls/choice_new.html
+++ b/DjangoWebProjectVS2017/app/templates/polls/choice_new.html
@@ -1,14 +1,43 @@
 ﻿{% extends "app/layout.html" %}
 {% block content %}
 
-<h2>{{ title }}.</h2>
+<h2>{{ title }}</h2>
 <h3>{{ message }}</h3>
 
-<h1>Insertar una opción</h1>
-        <form method="POST" class="post-form">{% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="save btn btn-default">Save</button>
+<div class="row">
+    <section id="questionForm">
+        <form method="POST" class="form-horizontal">
+            {% csrf_token %}
+            <h4>Insertar una opción</h4>
+            <hr />
+            {% for field in form %}
+                <div class="form-group">
+                    <label for="{{ field.auto_id }}" class="col-md-3 control-label">
+                        Write a
+                        {% if is_correct_choice %}
+                            <span style="font-weight: bold; color:green;">correct</span>
+                        {% else %}
+                            <span style="font-weight: bold; color:red;">wrong</span>
+                        {% endif %}
+                        answer:
+                    </label>
+                    <div class="col-md-9">
+                        {{ field }}
+                    </div>
+                    <p class="validation-summary-errors">{{ field.errors.as_text }}</p>
+                </div>
+            {% endfor %}
+            <div class="form-group">
+                <div class="col-md-offset-3 col-md-9">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </div>
+            {% if form.errors or error_message %}
+                <div class="alert alert-danger">{{ error_message }}</div>
+            {% endif %}
         </form>
-<a href="{% url 'index' %}">Ver preguntas</a> 
+    </section>
+    <a href="{% url 'index' %}">Ver preguntas</a>
+</div>
 
 {% endblock %}
