--- a/DjangoWebProjectVS2017/app/templates/polls/question_new.html
+++ b/DjangoWebProjectVS2017/app/templates/polls/question_new.html
@@ -1,38 +1,34 @@
 ﻿{% extends "app/layout.html" %}
 {% block content %}
 
-<h2>{{ title }}.</h2>
+<h2>{{ title }}</h2>
 <h3>{{ message }}</h3>
 
 <div class="row">
-    <div class="col-md-8">
-        <section id="questionForm">
-            <form method="POST" class="form-horizontal">
-                {% csrf_token %}
-                <h4>Insertar una pregunta</h4>
-                <hr />
-                {% for field in form %}
+    <section id="questionForm">
+        <form method="POST" class="form-horizontal">
+            {% csrf_token %}
+            <h4>Insertar una pregunta</h4>
+            <hr />
+            {% for field in form %}
                 <div class="form-group">
-                    <label for="{{ field.auto_id }}" class="col-md-2 control-label">{{ field.label_tag }}</label>
-                    <div class="col-md-10">
+                    <label for="{{ field.auto_id }}" class="col-md-3 control-label">{{ field.label_tag }}</label>
+                    <div class="col-md-9">
                         {{ field }}
                     </div>
                     <p class="validation-summary-errors">{{ field.errors.as_text }}</p>
                 </div>
-                {% endfor %}
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
-                    </div>
+            {% endfor %}
+            <div class="form-group">
+                <div class="col-md-offset-3 col-md-9">
+                    <input type="submit" value="Save" class="btn btn-default" />
                 </div>
-                {% if form.errors or error_message %}
-                <p class="validation-summary-errors">{{ error_message }}</p>
-                {% endif %}
-            </form>
-        </section>
-    </div>
-    <div class="col-md-4">
-        <a href="{% url 'index' %}">Ver preguntas</a>
-    </div>
+            </div>
+            {% if form.errors or error_message %}
+                <div class="alert alert-danger">{{ error_message }}</div>
+            {% endif %}
+        </form>
+    </section>
+    <a href="{% url 'index' %}">Ver preguntas</a>
 </div>
 {% endblock %}
