--- a/DjangoWebProjectVS2017/app/templates/polls/results.html
+++ b/DjangoWebProjectVS2017/app/templates/polls/results.html
@@ -1,16 +1,49 @@
 ﻿{% extends "app/layout.html" %}
 {% block content %}
 
+<style>
+    .choices ul {
+        list-style: none;
+        margin-left: 0;
+    }
+
+    .choices li {
+        padding-left: 1em;
+        text-indent: -2em;
+    }
+
+    .choices li:before {
+        padding-right: 1px;
+    }
+
+    .choices .li-correct:before {
+        content: '\2714'; /* Check mark symbol */
+        color: green;
+        font-weight: bold;
+    }
+
+    .choices .li-wrong:before {
+        content: '\2718'; /* Cross symbol */
+        color: red;
+        font-weight: bold;
+    }
+</style>
+
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
 
 <h1>{{ question.question_text }}</h1>
 
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %}
-</ul>
+<div class="choices">
+    <ul>
+    {% for choice in question.choice_set.all %}
+    
+        <li class="{% if choice.is_correct_answer %}li-correct{% else %}li-wrong{% endif %}">
+        {{ choice.choice_text }} ({{ choice.votes }} vote{{ choice.votes|pluralize }})
+        </li>
+    {% endfor %}
+    </ul>
+</div>
 
 <a href="{% url 'chart' question.id %}"> Ver grafica</a><br />
 <a href="{% url 'index' %}">Contestar otra pregunta?</a>
