--- a/DjangoWebProjectVS2017/app/templates/polls/index.html
+++ b/DjangoWebProjectVS2017/app/templates/polls/index.html
@@ -1,4 +1,5 @@
 ﻿{% extends "app/layout.html" %}
+
 {% block content %}
 
 <h2>{{ title }}.</h2>
@@ -8,22 +9,26 @@
     {% csrf_token %}
     <div class="form-group">
         {{ form.as_p }}
-        <input type="submit" value="Filter" class="btn btn-default" />
     </div>
 </form>
 
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
+        {% if not filtered_subject or filtered_subject == question.subject %}
+            <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
+        {% endif %}
     {% endfor %}
     </ul>
-  
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
 {% if request.user.is_authenticated %}
     <a href="{% url 'add' %}"><h2>Insertar pregunta</h2></a> 
+{% endif %}
+
+{% if error_message %}
+    <div class="alert alert-danger">{{ error_message }}</div>
 {% endif %}
 
 {% endblock %}
