--- a/DjangoWebProjectVS2017/app/templates/polls/detail.html
+++ b/DjangoWebProjectVS2017/app/templates/polls/detail.html
@@ -41,10 +41,12 @@
 
         {% endfor %}
 
-        <input type="submit" value="Vote" />
+        <input type="submit" value="Vote" class="btn btn-default" />
 
     {% endif %}
-
+    <div>
+        <a href="{% url 'index' %}">Ver preguntas</a>
+    </div>
 </form>
 
 {% endblock %}
